set(ATSF4G_APP_NAME atproxy)
echowithcolor(COLOR GREEN "-- Configure ${ATSF4G_APP_NAME} on ${CMAKE_CURRENT_LIST_DIR}")

# ============ atproxy ============

file(
  GLOB ATSF4G_APP_SRC_LIST
  RELATIVE ${CMAKE_CURRENT_LIST_DIR}
  ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/*.cc ${CMAKE_CURRENT_LIST_DIR}/*.c
  ${CMAKE_CURRENT_LIST_DIR}/*.cxx ${CMAKE_CURRENT_LIST_DIR}/*.h ${CMAKE_CURRENT_LIST_DIR}/*.hpp)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_INSTALL_BAS_DIR}/atframe/${ATSF4G_APP_NAME}/bin")

if(NOT EXISTS ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
  file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endif()

add_executable(${ATSF4G_APP_NAME} ${ATSF4G_APP_SRC_LIST})

if(MSVC)
  set_property(TARGET ${ATSF4G_APP_NAME} PROPERTY FOLDER "atframework/service")
  add_target_properties(${ATSF4G_APP_NAME} LINK_FLAGS /NODEFAULTLIB:library)
endif(MSVC)

target_link_libraries(${ATSF4G_APP_NAME} ${ATFRAMEWORK_SERVICE_COMPONENT_LINK_NAME})

target_compile_options(${ATSF4G_APP_NAME} PRIVATE ${ATFRAMEWORK_SREVICE_PRIVATE_OPTIONS})

target_include_directories(${ATSF4G_APP_NAME} PRIVATE "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>")

install(
  TARGETS ${ATSF4G_APP_NAME}
  EXPORT "${ATSF4G_APP_NAME}-target"
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})

export(
  TARGETS ${ATSF4G_APP_NAME}
  NAMESPACE "atframework::"
  FILE "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/cmake/${ATSF4G_APP_NAME}/${ATSF4G_APP_NAME}-target.cmake")

install(
  EXPORT "${ATSF4G_APP_NAME}-target"
  NAMESPACE "atframework::"
  DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${ATSF4G_APP_NAME}")
