set(ATSF4G_APP_NAME atproxy)
echowithcolor(COLOR GREEN "-- Configure ${ATSF4G_APP_NAME} on ${CMAKE_CURRENT_LIST_DIR}")

# ============ atproxy ============

file(
  GLOB ATSF4G_APP_SRC_LIST
  RELATIVE ${CMAKE_CURRENT_LIST_DIR}
  ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/*.cc ${CMAKE_CURRENT_LIST_DIR}/*.c
  ${CMAKE_CURRENT_LIST_DIR}/*.cxx ${CMAKE_CURRENT_LIST_DIR}/*.h ${CMAKE_CURRENT_LIST_DIR}/*.hpp)

set(ATSF4G_APP_HEADER_LIST "atproxy_manager.h")
set(ATSF4G_APP_SOURCE_LIST "atproxy.cpp" "atproxy_manager.cpp")

atframework_add_executable(
  ${ATSF4G_APP_NAME}
  ENABLE_PRIVATE_PRECOMPILE_HEADERS
  FOLDER_PATH
  "atframework/atgateway/service"
  PUBLIC_INCLUDE_DIRECTORY
  "${CMAKE_CURRENT_LIST_DIR}"
  PRIVATE_LINK_NAMES
  ${ATFRAMEWORK_SERVICE_COMPONENT_LINK_NAME}
  ${ATFRAMEWORK_LIBATAPP_LINK_NAME}
  HEADERS
  ${ATSF4G_APP_HEADER_LIST}
  SOURCES
  ${ATSF4G_APP_SOURCE_LIST})

target_link_libraries(${ATSF4G_APP_NAME} PRIVATE opentelemetry-cpp::api)
