# project_service_declare_sdk(
#   "ranksvr-sdk-settlement"
#   "${CMAKE_CURRENT_LIST_DIR}/settlement"
#   INCLUDE_DIR
#   "${CMAKE_CURRENT_LIST_DIR}/settlement"
#   DLLEXPORT_DECL
#   RANK_RPC_API
#   # USE_SERVICE_PROTOCOL
#   # ranksvr-protocol-settlement
#   HRADERS
#   "${CMAKE_CURRENT_LIST_DIR}/settlement/rpc/rank/ranksvrsettlementservice.h"
#   SOURCES
#   "${CMAKE_CURRENT_LIST_DIR}/settlement/rpc/rank/ranksvrsettlementservice.cpp"
# )

# target_link_libraries(${PROJECT_COMPONENT_RANKSVR_SDK} PUBLIC components::ranksvr-protocol)
